@@ -155,7 +155,7 @@ public class ReleaseNotesGenerator {
         if (nextPageToken != null) {
             uriBuilder.queryParam("nextPageToken", nextPageToken);
         }
-        URL jiraApi = new URL(uriBuilder.build().toUriString());
+        URL jiraApi = uriBuilder.build().toUri().toURL();
         HttpURLConnection connection = (HttpURLConnection) jiraApi.openConnection();
         connection.setRequestProperty("Accept", "application/json");
         connection.setRequestProperty("Content-Type", "application/json");
